--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,11 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!----Хедер проставить ссылки-->
@@ -13,9 +14,9 @@
         <nav>
             <ul>
                 <!---Ссылка "Студия" должна вести на новую страницу-->
-                <li><a href="">Студия</a></li>
+                <li><a href="./index.html">Студия</a></li>
                 <!---Ссылка "Портфолио" должна вести на новую страницу-->
-                <li><a href="">Портфолио</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <!---Ссылка "Контакты" ведет в футер-->
                 <li><a href="">Контакты</a></li>
             </ul>
