--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!----Хедер проставить ссылки-->
     <header class="header">
-        <a class="header-logo" href="./index.html">Web<span class="logo-part">Studio</span> </a>
+        <a class="header-logo" href="./index.html">Web<span class="header-logo-part">Studio</span> </a>
         <nav class="header-nav">
             <ul class="header menu">
                 <!---Ссылка "Студия" должна вести на новую страницу-->
@@ -68,7 +68,7 @@
         </section>
         <!--Чем мы занимаемся-->
         <section class="services">
-        <h2 class="services-title">Чем мы занимаемся</h2>
+        <h2 class="services-team-title">Чем мы занимаемся</h2>
         <!--Cсылка должна вести на отдельную страницу услуги-->
         <ul class="services-list">
             <li class="services-item">
@@ -84,7 +84,7 @@
         </section>
         <!----Наша Команда-->
         <section class="team">
-            <h2 class="team-title">Наша команда</h2>
+            <h2 class="services-team-title">Наша команда</h2>
             <ul class="team-list">
                 <li class="team-item">
                     <img class="team-item-img" src="images/ourteam/igor.jpg" alt="Product Designer" width="270" height="260">
@@ -110,17 +110,17 @@
         </section>
         <!----Footer---->
         <footer class="footer">
-            <a class="footer-logo" href="./index.html">WebStudio</a>
+            <a class="footer-logo" href="./index.html">Web<span class="footer-logo-part">Studio</span></a>
             <address class="footer-address"> 
                 <ul class="footer-list">
                     <li class="footer-list-item">
-                        <a class="google-map-link" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">г. Киев, пр-т Леси Украинки, 26</a>
+                        <a class="footer-item-map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">г. Киев, пр-т Леси Украинки, 26</a>
                     </li>
                     <li class="footer-list-item">
-                        <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="footer-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a class="footer-phone" href="tel:+380961111111">+38 096 111 11 11</a>                    
+                        <a class="footer-item" href="tel:+380961111111">+38 096 111 11 11</a>                    
                     </li>
                 </ul>  
             </address>    
